--- a/index.html
+++ b/index.html
@@ -645,6 +645,22 @@
       </div>
     </section>
 
+    <!-- Section - Ready To Join -->
+    <section class="ready-to-join-container-outer">
+      <div class="ready-to-join-container-inner">
+        <h3>Ready to Begin?</h3>
+        <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class</p>
+        <div class="cta-container">
+          <div class="cta-wrap">
+            <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
+          </div>
+          <div class="cta-wrap">
+            <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer>
       <div class="footer-inner-container">
